changed game name

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Matteträning - enkla tal för att lära dig plus och minus</title>
 </head>
 <body>
-    <h1>Mathlete Champ</h1>
+    <h1>Mathlete Camp</h1>
     <div class="blackboard"></div>
     <div class="buttons">
         <button id="check-answers-button">Rätta!</button>
