"Changed code so images are fetched from an API instead. Removed locale images."

--- a/index.html
+++ b/index.html
@@ -20,6 +20,49 @@
         <button id="reload-button">Ladda nya tal</button>
     </div>
 
+    <div class="setup-modal">
+        <div class="setup-modal-content">
+            <h2 class="welcome-text">Välkommen till Mathlete Camp!</h2>
+            <h3 class="choose-team-h3">Välj ditt favorit fotbollslag: </h3>
+            <div class="team-div">
+                <figure role="button" data-team="barcelona">
+                    <img src="./images/barcelona.png" alt="logo Barcelona">
+                    <figcaption>Barcelona</figcaption>
+                </figure>
+                <figure role="button" data-team="juventus">
+                    <img src="./images/juventus.png" alt="logo Juventus">
+                    <figcaption>Juventus</figcaption>
+                </figure>
+                <figure role="button" data-team="bayern-munchen">
+                    <img src="./images/bayern-munchen.png" alt="logo Bayern München">
+                    <figcaption>Bayern München</figcaption>
+                </figure>
+                <figure role="button" data-team="manchester-city">
+                    <img src="./images/manchester-city.png" alt="logo Manchester City">
+                    <figcaption>Manchester City</figcaption>
+                </figure>
+                <figure role="button" data-team="manchester-united">
+                    <img src="./images/manchester-united.png" alt="logo Manchester United">
+                    <figcaption>Manchester United</figcaption>
+                </figure>
+                <figure role="button" data-team="milan">
+                    <img src="./images/milan.png" alt="logo Milan">
+                    <figcaption>Milan</figcaption>
+                </figure>
+                <figure role="button" data-team="psg">
+                    <img src="./images/psg.png" alt="logo Paris Saint-Germain">
+                    <figcaption>Paris Saint-Germain</figcaption>
+                </figure>
+                <figure role="button" data-team="real-madrid">
+                    <img src="./images/real-madrid.png" alt="logo Real Madrid">
+                    <figcaption>Real Madrid</figcaption>
+                </figure>
+            </div>
+            <button class="start-button">Starta Spelet</button>
+            <p class="chosen-team-text"></p>
+        </div>
+    </div>
+
     <div class="modal modal-hidden">
         <div class="modal-content">
             <span id="link-modal-close" class="close">&times;</span>
